fix: moved output.pdf to paper dir

--- a/paper/sections/resultados.tex
+++ b/paper/sections/resultados.tex
@@ -60,15 +60,15 @@ Para comprender mejor la correlación entre las proporciones de los cortes y las
 \begin{figure}[!htb]
 \minipage{0.32\textwidth}
     \includegraphics[width=\linewidth]{imgs/resultados/corr/dice_vs_lesion.png}
-    \caption{Relación entre Dice y los cortes con lesión.}\label{fig:dice_vs_lesion}
+    % \caption{Relación entre Dice y los cortes con lesión.}\label{fig:dice_vs_lesion}
 \endminipage\hfill
 \minipage{0.32\textwidth}
     \includegraphics[width=\linewidth]{imgs/resultados/corr/dice_vs_sin_lesion.png}
-    \caption{Relación entre Dice y los cortes sin lesión.}\label{fig:dice_vs_sin_lesion}
+    % \caption{Relación entre Dice y los cortes sin lesión.}\label{fig:dice_vs_sin_lesion}
 \endminipage\hfill
 \minipage{0.32\textwidth}%
     \includegraphics[width=\linewidth]{imgs/resultados/corr/dice_vs_negras.png}
-    \caption{Relación entre Dice y los cortes negros.}\label{fig:dice_vs_negras}
+    % \caption{Relación entre Dice y los cortes negros.}\label{fig:dice_vs_negras}
 \endminipage
 \caption{Proporción de cortes con y sin lesión en los experimentos.}
 \label{fig:proporcion_cortes}
